# Spresso

./: .descriptions.xml  .easignore  .firebaserc  .gitignore  .gitlab-ci.yml  .infisical.env  .infisical.json  .npmrc  .pre-commit-config.yaml  AGENTS.md  AndroidDomInspection.xml  Annotator.xml  App.tsx  CHECKLIST.artifact.md  CheckEmptyScriptTag.xml  EmptyDirectory.xml  GITLAB_MCP_CONFIG.md  HtmlDeprecatedAttribute.xml  HtmlRequiredLangAttribute.xml  HtmlUnknownTag.xml  HtmlUnknownTarget.xml  IgnoreFileDuplicateEntry.xml  LatestMinorVersion.xml  MOCK_VALIDATION.md  MarkdownIncorrectTableFormatting.xml  MarkdownIncorrectlyNumberedListItem.xml  MarkdownNoTableBorders.xml  MarkdownUnresolvedFileReference.xml  ProblematicWhitespace.xml  README.md  RequiredAttributes.xml  ShrinkerUnresolvedReference.xml  SpellCheckingInspection.xml  TodoComment.xml  UnusedProperty.xml  XmlHighlighting.xml  app.json  billing.json  build.gradle.kts  build_logs.txt  (+35 more)
Retail-Agentic-Commerce/: .gitignore  AGENTS.md  README.md  agentic_commerce.db  docker-compose.yml  env.example  garak.29e6239b-fe3c-40f7-a992-988ecc281d70.report.jsonl  garak.b73ae454-ffb1-4522-973f-09f02bc5390c.report.jsonl  giskard_audit.py  install.sh  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rehearsal_brain.db
Retail-Agentic-Commerce/.claude/commands/: setup.md
Retail-Agentic-Commerce/deploy/: 1_Deploy_Agentic_Commerce.ipynb
Retail-Agentic-Commerce/docs/: PRD.md  stack.md
Retail-Agentic-Commerce/docs/features/: feature-01-project-foundation.md  feature-05-psp-payments.md  feature-11-webhook-integration.md  feature-13-ui-acp-integration.md  feature-14-enhanced-checkout.md
Retail-Agentic-Commerce/docs/specs/: acp-spec.md  ucp-spec.md
Retail-Agentic-Commerce/prompts/: discovery.prompt
Retail-Agentic-Commerce/skills/setup/: SKILL.md
Retail-Agentic-Commerce/src/: skills-lock.json
Retail-Agentic-Commerce/src/agents/: Dockerfile  pyproject.toml  register.py
Retail-Agentic-Commerce/src/apps_sdk/: README.md  config.py  main.py  recommendation_helpers.py
Retail-Agentic-Commerce/src/data/: product_catalog.py
Retail-Agentic-Commerce/src/merchant/: config.py  main.py
Retail-Agentic-Commerce/src/payment/: config.py
Retail-Agentic-Commerce/src/ui/: Dockerfile  env.example  eslint.config.mjs  middleware.ts  next.config.ts  package.json  sentry.client.config.ts  tsconfig.json  (+3 more)
Retail-Agentic-Commerce/tests/: conftest.py
(+373 files in other folders)
