[project]
name = "agentic-commerce"
version = "0.1.0"
description = "Agentic Commerce Protocol Reference Architecture"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "sentry-sdk[fastapi]>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.34",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.14.2",
    "stripe>=11.4.0",
    "python-dotenv==1.2.2",
    "genkit>=0.7.0",
    "genkit-plugin-fastapi>=0.7.0",
    "genkit-plugin-google-genai>=0.7.0",
    "httpx>=0.28.0",
    "mcp>=1.2.0",
    "pymilvus>=2.5.0",
    "a2a-sdk[http-server]>=0.3.22",
    "google-genai>=1.0.0",
    "PyJWT[crypto]>=2.10.1",
    "pyyaml>=6.0.2",
    "google-cloud-aiplatform>=1.78.0",
    "firebase-admin>=6.6.0",
    "svix>=1.21.0",
    "psycopg2-binary>=2.9.9",
    "upstash-redis>=1.0.0",
    "boto3>=1.34.0",
    "locust>=2.44.4",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (standard FastAPI pattern with Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
managed = true
constraint-dependencies = [
    "sentry-sdk[fastapi]>=2.0.0",
    "cryptography>=46.0.6",
]
